fixed pom.xml after merge